feat: add exact alarm scheduling and fullscreen test activity

--- a/CinematicWake/app/src/main/AndroidManifest.xml
+++ b/CinematicWake/app/src/main/AndroidManifest.xml
@@ -16,14 +16,17 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.CinematicWake">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".features.animation.FullscreenAlarmActivity"
+            android:exported="false"
+            android:theme="@style/Theme.CinematicWake" />
 
         <receiver
             android:name=".features.schedule.AlarmReceiver"
