feat: cinematic wake MVP with schedule and animation store
Implement full-screen alarm experience with video animations and basic UX:
- Add FullscreenAlarmActivity playing selected animation over the lock screen
- Add tap controls: single tap to pause/resume, double tap to stop and close
- Add Home screen with Atlas background, tagline, date/time, and day-of-year
- Add AnimationStoreActivity to choose the current animation
- Add ScheduleActivity to pick daily alarm time and persist it
- Wire AlarmScheduler to use stored alarm time via ScheduleSelectionStore
- Replace hard-coded alarm time (+1 min) by user-configured daily time
- Clean up unused legacy classes (ScreenOnReceiver, PendingAnimationStore, etc.)

--- a/CinematicWake/app/src/main/AndroidManifest.xml
+++ b/CinematicWake/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CinematicWake"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,14 +26,32 @@
             </intent-filter>
         </activity>
 
+        <!-- Full screen alarm activity shown over lockscreen -->
         <activity
             android:name=".features.animation.FullscreenAlarmActivity"
             android:exported="false"
+            android:showWhenLocked="true"
+            android:turnScreenOn="true"
+            android:excludeFromRecents="true"
+            android:theme="@style/Theme.CinematicWake.Alarm" />
+
+        <activity
+            android:name=".features.animation.AnimationStoreActivity"
+            android:exported="false"
             android:theme="@style/Theme.CinematicWake" />
 
+        <activity
+            android:name=".features.schedule.ScheduleActivity"
+            android:exported="false"
+            android:theme="@style/Theme.CinematicWake" />
+
+        <!-- Alarm broadcast receiver -->
         <receiver
             android:name=".features.schedule.AlarmReceiver"
             android:exported="false" />
+
+        <!-- ScreenOnReceiver no longer needed for this approach, so removed -->
+
     </application>
 
 </manifest>
